--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL=https://rlai.dev" />
+  </head>
   <body>
-    Hello world!
   </body>
 </html>
