--- a/biz.html
+++ b/biz.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <script>
-      const currentUrl = window.location.href;
-      window.onpopstate = () => location.reload();
-      window.history.replaceState({}, 'test', 'https://robertlai.github.io/search.html');
-      window.history.pushState({}, 'test2', currentUrl);
+      window.onload = () => {
+        const currentUrl = window.location.href;
+        window.onpopstate = () => location.reload();
+        window.history.replaceState({}, 'test', 'https://robertlai.github.io/search');
+        window.history.pushState({}, 'test2', currentUrl);
+      }
     </script>
   </head>
   <body>
